--- a/tabs/public/auth-end.html
+++ b/tabs/public/auth-end.html
@@ -1,7 +1,6 @@
 <!--This file is used during the Teams authentication flow to assist with retrieval of the access token.-->
 <!--If you're not familiar with this, do not alter or remove this file from your project.-->
-<!DOCTYPE html>
-<html lang="en">
+<html>
 
 <head>
   <title>Login End Page</title>
@@ -9,67 +8,45 @@
 </head>
 
 <body>
-  <script src="https://statics.teams.cdn.office.net/sdk/v1.6.0/js/MicrosoftTeams.min.js"
-    integrity="sha384-mhp2E+BLMiZLe7rDIzj19WjgXJeI32NkPvrvvZBrMi5IvWup/1NUfS5xuYN5S3VT"
+  <script src="https://res.cdn.office.net/teams-js/2.22.0/js/MicrosoftTeams.min.js"
+    integrity="sha384-WSG/sWulIv7rel5TnFlH8JTpxl2OxzZh9Lux2mIzBFiTRLFvMBeFv9VURu/3vQdx"
     crossorigin="anonymous"></script>
+  <script type="text/javascript" src="https://alcdn.msauth.net/browser/2.35.0/js/msal-browser.min.js"
+    integrity="sha384-s/NxjjAgw1QgpDhOlVjTceLl4axrp5nqpUbCPOEQy1PqbFit9On6uw2XmEF1eq0s" crossorigin="anonymous">
+    </script>
   <script type="text/javascript">
-    microsoftTeams.initialize();
-    let hashParams = getHashParameters();
+    var currentURL = new URL(window.location);
+    var clientId = currentURL.searchParams.get("clientId");
 
-    if (hashParams["error"]) {
-      // Authentication failed
-      microsoftTeams.authentication.notifyFailure(
-        JSON.stringify({
-          error: hashParams["error"],
-          message: JSON.stringify(hashParams),
-        })
-      );
-    } else if (hashParams["code"]) {
-      // Get the stored state parameter and compare with incoming state
-      let expectedState = localStorage.getItem("state");
-      if (expectedState !== hashParams["state"]) {
-        // State does not match, report error
-        microsoftTeams.authentication.notifyFailure(
-          JSON.stringify({
-            error: "StateDoesNotMatch",
-            message: JSON.stringify(hashParams),
+    microsoftTeams.app.initialize().then(() => {
+      microsoftTeams.app.getContext().then(async (context) => {
+        const msalConfig = {
+          auth: {
+            clientId: clientId,
+            authority: `https://login.microsoftonline.com/${context.tid}`,
+            navigateToLoginRequestUrl: false
+          },
+          cache: {
+            cacheLocation: "sessionStorage",
+          },
+        }
+
+        const msalInstance = new window.msal.PublicClientApplication(msalConfig);
+        msalInstance.handleRedirectPromise()
+          .then((tokenResponse) => {
+            if (tokenResponse !== null) {
+              microsoftTeams.authentication.notifySuccess(JSON.stringify({
+                sessionStorage: sessionStorage
+              }));
+            } else {
+              microsoftTeams.authentication.notifyFailure("Get empty response.");
+            }
           })
-        );
-      } else {
-        // Success -- return code information to the parent page.
-        var redirectUri = location.protocol + "//" + location.host + location.pathname;
-        var result = JSON.stringify({
-          code: hashParams["code"],
-          codeVerifier: localStorage.getItem("codeVerifier"),
-          redirectUri: redirectUri,
-        });
-
-        microsoftTeams.authentication.notifySuccess(result);
-      }
-    } else {
-      // Unexpected condition: hash does not contain error or access_token parameter
-      microsoftTeams.authentication.notifyFailure(
-        JSON.stringify({
-          error: "UnexpectedFailure",
-          message: JSON.stringify(hashParams),
-        })
-      );
-    }
-
-    // Parse hash parameters into key-value pairs
-    function getHashParameters() {
-      let hashParams = {};
-      location.hash
-        .substr(1)
-        .split("&")
-        .forEach(function (item) {
-          let s = item.split("="),
-            k = s[0],
-            v = s[1] && decodeURIComponent(s[1]);
-          hashParams[k] = v;
-        });
-      return hashParams;
-    }
+          .catch((error) => {
+            microsoftTeams.authentication.notifyFailure(JSON.stringify(error));
+          });
+      });
+    });
   </script>
 </body>
 
